fix home-3 formula-2 on tablet and mobile screens

--- a/src/app/start-section/home/home.component.sass
+++ b/src/app/start-section/home/home.component.sass
@@ -220,6 +220,13 @@ section
       .cards-group
         margin-bottom: 30px
 
+@media (max-width: 830px)
+  section
+    &.home-3
+      .content
+        &:nth-child(2)
+          .formula
+            margin-left: -45px
 
 @media (max-width: 767px)
   section
@@ -285,7 +292,7 @@ section
               margin-top: 15px
         &:nth-child(2)
           .formula
-            margin-left: -17px
+            margin-left: auto
       .action
         margin-bottom: 30px
     
